- new method SCIPgetGlobalPseudoObjval() which returns the global pseudo objective value which is all variables
  set to their best (w.r.t. the objective function) global bound
- new method SCIPhashtableClear() which removes all elements of a hash table
- new callback method in constraint handler SCIP_DECL_CONSGETVARSDATA which is optional and returns for a constraint
  the involved variables
- new callback methods in constraint handler SCIP_DECL_CONSGETVAR and SCIP_DECL_CONSGETVAR which are optional and 
  returns for a constraint the involved variables and the number of variables
- new methods SCIPgetConsVars() and SCIPgetConsNVars() which return for a given constraint the involved variables and 
  the number of variables if the corresponding constraint supports this (optional) callbacks

performance improvements:
- improved scaling of linear constraints, linear constraints with integral variables will now be scale with
  1e+06/MAX(maximal absolute coefficient, 1.0) instead of 1e+03/MAX(maximal absolute coefficient, 1.0);
  if all coefficients are in absolute value equal they will be scaled by that
- if probing reached the end of all variables it will restart the probing cycle correctly
- improved intdiving heuristic by activating backtracking to a different fixing value
- improved scaling by choosing the smallest scaler
- if first root lp is solved and the optimality is rejected by SCIP, there won't be an unnecessary solving of the lp
  from scratch again
- automatically turn off separation in sepa_oddcycle if it was too unsuccessful within the last calls
- use faster Dijkstra variants in sepa_oddcycle
- improved pseduo objective propagator
 
plugins:
- added new presolver convertinttobin, which converts bounded integer variables to their binary representation, e.g.
  for integer variable 0 <= x <= 10 the binary variables y0, y1, y2, and y3 are created, such that
  1 y0 + 2 y1 + 4 y2 + 8 y3 <= 10 and x = 1 y0 + 2 y1 + 4 y2 + 8 y3

fixed bugs: